3.0, add step to tomcat setup + some cleanup